# Wildfire_Asym_Cell_Devs

./: .gitignore  CMakeLists.txt  README.md  build_sim.sh  generate_scenarios.py  main.cpp  run_all_scenarios.sh  scenario.json  visualize_wildfire.py
include/: wildfire_cell.hpp  wildfire_state.hpp
results/: grid_log_firebreak.csv  grid_log_fortmcmurray.csv  grid_log_windy.csv
scenarios/: scenario_calm.json  scenario_firebreak.json  scenario_fortmcmurray.json  scenario_urban.json  scenario_windy.json
